# capnp-stub-generator

./: .gitignore  pyproject.toml
capnp_stub_generator/: cli.py  helper.py  run.py  writer.py
python/projects/capnp-stub-generator/: pyproject.toml
python/projects/capnp-stub-generator/capnp_stub_generator/: capnp_types.py  cli.py  generator.py  helper.py  writer.py
tests/: dummy.capnp  test_generation.py  use_dummy.py
