[tool.poetry]
name = "capnp-stub-generator"
version = "3.0.0"
description = ""
authors = ["comma.ai <justin@comma.ai>", "Adrian Figueroa <adrian.figueroa@metirionic.com>"]

[tool.poetry.dependencies]
python = "*"
black = "*"
isort = "*"
pycapnp = "*"

[tool.poetry.group.test.dependencies]
mypy = "*"
pytest = "*"

[tool.poetry.scripts]
capnp-stub-generator = "capnp_stub_generator.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
